--- a/projects/templates/projects/all_projects.html
+++ b/projects/templates/projects/all_projects.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,8 +10,9 @@
 </head>
     <body>
     <h1>Section with Python</h1>
-    {{ projects }}
     {% for project in projects %}
+<!--        <img src="{% static project.image %}" alt="slayer album cover">-->
+        <img src="{% static 'projects/img/hellawaits.png' %}" alt="slayer album cover">
         <h4>{{ project.title }}</h4>
         <p>{{ project.description }}</p>
         <p>{{ project.technology }}</p>
