--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -4,12 +4,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>{{ project.title }}</title>
 </head>
 <body>
-    <img src="{% static project.image%}" alt="{{ project.description }}">
-    <h1>{{ project.title }}</h1>
-    <p>{{ project.description }}</p>
-    <p>{{ project.technology }}</p>
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+            <img src="{% static project.image%}" alt="{{ project.description }}">
+            <h1>{{ project.title }}</h1>
+            <p>{{ project.description }}</p>
+            <p>{{ project.technology }}</p>
+<!--        </div>-->
+<!--    </div>-->
 </body>
 </html>
