added base.html boilerplate

--- a/projects/templates/projects/all_projects.html
+++ b/projects/templates/projects/all_projects.html
@@ -1,16 +1,9 @@
+{% extends "projects/base.html" %}
 {% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Slayer</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-</head>
-<body>
+{% block content %}
     <div class="container">
         <h1>Slayer</h1>
-        <h2>Albums</h2>
+        <h2>Discography</h2>
         <div class="row">
             {% for project in projects %}
                 <div class="col-md-4">
@@ -26,5 +19,4 @@
             {% endfor %}
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
