--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -2,9 +2,17 @@
 {% load static %}
 {% block content %}
 
-    <img src="{% static project.image%}" alt="{{ project.description }}">
-    <h1>{{ project.title }}</h1>
-    <p>{{ project.description }}</p>
-    <p>{{ project.technology }}</p>
+    <div class="row">
+        <div class="col-md-8">
+            <img src="{% static project.image%}" alt="{{ project.description }}">
+        </div>
+        <div class="col-md-4">
+            <h1>{{ project.title }}</h1>
+            <p>{{ project.description }}</p>
+            <p>{{ project.technology }}</p>
+        </div>
+
+    </div>
+
 
 {% endblock %}
