--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'projects:all_projects' %}">Albums</a>
+            <a class="navbar-brand" href="{% url 'projects:home' %}">Home</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'projects:all_projects' %}">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{% url 'projects:all_projects' %}">Albums <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="collapse navbar-collapse" id="about">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'projects:about' %}">About <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
